--- a/_sass/constants.scss
+++ b/_sass/constants.scss
@@ -1,6 +1,8 @@
 $BACKGROUND: rgba(255,255,255,1);
 $TEXT-BACKGROUND: rgba(255,255,255,1);
 
+$FAMILY-SANS: 'Raleway', 'Arial';
+
 $TEXT-BASE: rgba(0,0,0,1);
 $TITLE-COLOR: lighten($TEXT-BASE, 10%);
 $TEXT-COLOR: lighten($TEXT-BASE, 20%);
@@ -13,13 +15,24 @@ $MENU-BACKGROUND-COLOR: rgba(255,255,255,1);
 $MENU-TEXT-COLOR: rgba(40,40,40,1);
 $MENU-TEXT-HOVER-COLOR: lighten($MENU-TEXT-COLOR, 40%);
 
-$DESKTOP-WIDTH-SITE: 1280px;
-$COLUMN-WIDTH: $DESKTOP-WIDTH-SITE/4;
+$MENU-TITLE-SIZE: 1.1rem;
+$MENU-SUBTITLE-SIZE: 1.1rem;
+$MENU-ITEM-SIZE: 1rem;
+
+$TITLE-SIZE: 2.2vw;
+$TEXT-SIZE: 1.6vw;
+$LINK-SIZE: 1.7vw;
+
+$TITLE-SIZE-MOBILE: 1.5rem;
+$TEXT-SIZE-MOBILE: 1rem;
+$LINK-SIZE-MOBILE: 1rem;
+
+$COLUMN-WIDTH: 320px;
+$MENU-WIDTH: 280px;
+$MENU-ITEM-SPACING: 4px;
 
 $TRANSITION-PERIOD: 0.1s;
 $RESPONSIVE-SPACING: 2vw;
-$MENU-ITEM-SPACING: 4px;
-$MENU-WIDTH: 280px;
 
 $two_columns: 2 * $COLUMN-WIDTH;
 $three_columns: 3 * $COLUMN-WIDTH;
@@ -32,3 +45,4 @@ $three_columns: 3 * $COLUMN-WIDTH;
    @media only screen and (min-width: $three_columns) { @content; }
   }
 }
+
